<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="app_name">麻花影视</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bank_bind_tips">提现金额必须为50的倍数，且大于或等于50。</string>
    <string name="bank_bind_tips1">输入金额不得大于提现金额</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_success">清除成功...</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="detail_text">111我发斯蒂芬是打发阿斯蒂芬撒地我发斯蒂芬是打发阿斯蒂芬撒地方我打发阿斯 发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂打发阿斯蒂芬撒地方我蒂芬撒发 我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂撒地方芬是打发阿斯蒂打发阿斯蒂芬撒地方我撒地方我我蒂芬撒 芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒 地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地撒 撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是阿斯蒂芬撒地撒 打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打撒 发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿 芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方我发斯蒂芬是打发阿 发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂打发阿斯蒂芬撒地方我蒂芬撒发 我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂撒地方芬是打发阿斯蒂打发阿斯蒂芬撒地方我撒地方我我蒂芬撒 芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒 地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地撒 撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是阿斯蒂芬撒地撒 打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打撒 发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿 芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方我发斯蒂芬是打发阿 发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂打发阿斯蒂芬撒地方我蒂芬撒发 我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂撒地方芬是打发阿斯蒂打发阿斯蒂芬撒地方我撒地方我我蒂芬撒 芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒 地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地撒 撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是阿斯蒂芬撒地撒 打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打撒 发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿 芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方我发斯蒂芬是打发阿 发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂打发阿斯蒂芬撒地方我蒂芬撒发 我发斯蒂芬是打发阿斯蒂芬撒地方我发斯蒂撒地方芬是打发阿斯蒂打发阿斯蒂芬撒地方我撒地方我我蒂芬撒 芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒 地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地撒 撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是阿斯蒂芬撒地撒 打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打撒 发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿 芬撒地方方撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方撒地方我发斯蒂芬是打发阿 撒地方芬是打发阿斯蒂芬撒地方我发斯蒂芬是打发阿斯蒂芬撒地方方11</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ijkplayer_dummy" />
    <string name="invite_from_friend">"您通过好友邀请成功注册麻花影视
获得了一次观看完整版热门影片的机会"</string>
    <string name="jump_ad">跳过</string>
    <string name="mall">商城</string>
    <string name="no_net">当前找不到网络</string>
    <string name="no_url">播放地址无效</string>
    <string name="not_yet_open">暂未开放，尝试下其他分享方式吧。</string>
    <string name="partner_dialog_string">邀请朋友下载麻花影视，朋友点击麻花影视内的广告下载应用，在应用中朋友参与的总金额，决定你当日的合伙人分红。朋友越多，分红越多。</string>
    <string name="partner_right_tips">"邀请好友扫描二维码，好友通过麻花玩游戏
千万用户基础，最容易挣钱的影视APP"</string>
    <string name="partner_right_tips_2">每个人都可以成为麻花合伙人，邀请朋友下载麻花，朋友点击麻花广告下载游戏，在游戏中朋友参与的总金额，决定你当日的合伙人分红。朋友越多，分红越多。自己玩游戏，也会按照分红比例给你返利。盈利越多返利越多!</string>
    <string name="partner_right_tips_3">例：邀请的参与游戏总金额4w，分红比例为40%，利润为1.6w</string>
    <string name="partner_tips">"好友玩游戏，自己拿分红
自己玩游戏，更有返利拿"</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_guide">"权限缺失可能导致某些功能无法正常使用。
请前往设置-权限管理-打开所需权限。"</string>
    <string name="permission_name_calendar">Calendar</string>
    <string name="permission_name_camera">Camera</string>
    <string name="permission_name_contacts">Contacts</string>
    <string name="permission_name_location">Location</string>
    <string name="permission_name_microphone">Microphone</string>
    <string name="permission_name_phone">Phone</string>
    <string name="permission_name_sensors">Body Sensors</string>
    <string name="permission_name_sms">SMS</string>
    <string name="permission_name_storage">Storage</string>
    <string name="question_1">请问您是男士还是女士？</string>
    <string name="question_10">您是如何知道麻花影视的？</string>
    <string name="question_11">您选择麻花影视的原因是什么？</string>
    <string name="question_12">如果麻花影视推出新的功能，你更喜欢？</string>
    <string name="question_13">感谢您的参与，最后您对麻花影视有什么建议或意见，请告诉我们，我们会尽最大的努力让您满意。</string>
    <string name="question_2">请问您的年龄段是？</string>
    <string name="question_3">您目前从事的职业是？</string>
    <string name="question_4">您最常使用的视频APP是？</string>
    <string name="question_5">您每月花费多少钱购买各大视频网站VIP会员？</string>
    <string name="question_6">您每周大概花多长时间看视频？</string>
    <string name="question_7">您喜欢看什么类型的内容？</string>
    <string name="question_8">你平时上那些社区类网站？</string>
    <string name="question_9">当出现有你喜欢的影视需要花钱观看时，你会？</string>
    <string name="save_photo">保存到相册</string>
    <string name="schemeUrl">imahuays</string>
    <string name="search_menu_title">Search</string>
    <string name="share_link">复制链接</string>
    <string name="share_moments">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_web">微博</string>
    <string name="share_wechat">微信</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_introduce">初夏在地下拳击馆看见一个长得跟阿J一模一样的人，而他的名字叫郭佑。在勺子叔的努力下，警方同意用 天眼系统排污救人，蚂蚁金服公司关闭数据库并选用助理刘小凡作为封锁数据库大门的keyman。一切迹 象表明Satan的公式杀人计划得到有效遏制。然而这样真的能够阻挡Satan继续杀人的计划吗？还在病床上 的阿J和郭佑又是什么关系？答应Satan混入蚂蚁金服公司的郭佑到底有何企图？</string>
    <string name="system_name">"分享下载%s
分红一网打尽"</string>
    <string name="tencent_scheme">tencent101520958</string>
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="vip_desc">"麻花影视定期提供大量独享片源
为您打开新世界大门"</string>
</resources>
