<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/share_content" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/ll_share_shot_contains" android:background="@drawable/border_rectangle_empty_gray" android:padding="8.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/iv_video_share_shot" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@mipmap/subscribe_bg" android:scaleType="fitXY" />
        <View android:background="@color/bg_transparent_30" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true">
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="分享到社交平台" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_save_pic" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ico_fullplayer_picshare_photo" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffcccccc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="保存到相册" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_wechat" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_share_wechat" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffcccccc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/share_wechat" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_moments" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_share_moments" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffcccccc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/share_moments" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_qq" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_share_qq" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffd1d1d1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/share_qq" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_qzone" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_share_qzone" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffd1d1d1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/share_qzone" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_share_web" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_share_web" />
                    <TextView android:textSize="@dimen/tv_size_micro" android:textColor="#ffd1d1d1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/share_web" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/tv_video_share_cancel" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:layout_marginRight="20.0dip" android:text="取消" android:layout_alignParentRight="true" />
</RelativeLayout>